--- a/notebooks/arb_dao_grant_distribution/STIP_Updates/26-1-2024/26-1-2024.md
+++ b/notebooks/arb_dao_grant_distribution/STIP_Updates/26-1-2024/26-1-2024.md
@@ -65,9 +65,9 @@ Stats from [Openblock Dashboard](https://www.openblocklabs.com/app/arbitrum/gran
 
 **Amount of ARB to be distributed:** 82285.3
 
-**Contracts that will be incentivized:** Contracts to be incentivied are outlined in this [csv](https://github.com/BalancerMaxis/STIP_automation/blob/9c0791acfec184c114f840444bb1c4d183c9cbf4/output/dao_grant_2023-12-28_2024-01-11.csv), subject to change as more gauges are added to the veBAL system on Arbitrum.
+**Contracts that will be incentivized:** Contracts to be incentivied are outlined in this [csv](https://github.com/BalancerMaxis/STIP_automation/blob/main/output/dao_grant_2024-01-11_2024-01-25.csv), subject to change as more gauges are added to the veBAL system on Arbitrum.
 
-![Arb_STIP_Gauges_11_1.png](Arb_STIP_Gauges_11_1.png)
+![Arb_STIP_Gauges_25_1.png](Arb_STIP_Gauges_25_1.png)
 
 **Contract address label [Form](https://docs.google.com/forms/d/e/1FAIpQLSd2AYnjAaQjVOLtvemZpsWoN5sTJEJ8dLqdRDExTBQv_SUeug/viewform) completed for all addresses:** Yes
 
@@ -75,7 +75,7 @@ Stats from [Openblock Dashboard](https://www.openblocklabs.com/app/arbitrum/gran
 
 **Summary of incentives plan:** The original plan carries on in a different form as it has through the last four rounds. With the changes in total allocations of ARB there has been no wavering in the strategy. Balancer's core pool mentality stays the same, and having the same core metrics to drive fees for both the Arbitrum ecosystem we will continue to push for more capital efficient pools to compete on our platform. This competition drives the increases in TVL, volume, and ultimatley fees for all involved. 
 
-We have been working closely with the Plutus team to thread the needle of layering a liquid wrapper on top of the Radiant dlp juggernaught. [plsRDNT](https://app.balancer.fi/#/arbitrum/pool/0x451b0afd69ace11ec0ac339033d54d2543b088a80000000000000000000004d5) as a top yield earner will receive more emissions over time, however there is intentions to change the strategy to reach a sustainable market condition of the wrappers peg to the liquid pairing. Stay tuned to their community discussions for more information on this. 
+We have been working closely with the Plutus team to thread the needle of layering a liquid wrapper on top of the Radiant dlp juggernaught. [plsRDNT](https://app.balancer.fi/#/arbitrum/pool/0x451b0afd69ace11ec0ac339033d54d2543b088a80000000000000000000004d5) as a top yield earner will receive more emissions over time, however there is currently community discussion on their end to change the strategy to reach a sustainable market condition of the wrappers peg to the liquid pairing. Stay tuned to their community discussions for more information on this as the offering progresses. 
 
 The [sFRAX/4POOL](https://app.balancer.fi/#/arbitrum/pool/0x2ce4457acac29da4736ae6f5cd9f583a6b335c270000000000000000000004dc) has support from several communtities at this time. Balancer, Arbitrum, Frax, Aura, and Beefy all have skin in the game for this pool to continue to grow. While it is a highlight this round, it likely will continue to be so throughout the remainder of the STIP program, and long after. 
 
