--- a/notebooks/arb_dao_grant_distribution/STIP_Updates/9-2-2024/26-1-2024.md
+++ b/notebooks/arb_dao_grant_distribution/STIP_Updates/9-2-2024/26-1-2024.md
@@ -26,7 +26,7 @@ This injection was the second round of scaled back ARB incentives and will be th
 
 **Summary of incentives:** Incentives were injected to pool gauge's based on the CSV above, which shows where the ARB was sent based upon the plan outlined in [Balancer's FINAL STIP Round 1 framework](https://forum.arbitrum.foundation/t/balancer-final-stip-round-1/16689). The incentives continue to flow towards the highest revenue earning pools in terms of total fees. This encompasses yield and swap fees generated for LPs and rewards the healthiest pools in the ecosystem. Arbitrum and Balancer both continue to benefit from the liquidity incentives maintaining the TVL it attracted in the earlier phases of the STIP. This round displays a good indication relative to the prior weeks of how Balancer will perform on Arbitrum as ARB rewards scale back and settle in for liquidity providers.
 
-The TVL at the time of writing the previous report was 119M total, and this has stayed consistent as the average daily TVL over the last two weeks. Today the TVL on Balancer is 121M and we can thank the integrations built on top of and within Balancer for optimizing liquidity strategies in throughout the Arbitrum ecosystem for this. Balancer acting as base layer for yield optimizing protocols to tie into is how our dex brings great value to a network like Arbitrum. Regardless of the 60% reduction in incentives TVL has taken a minor step down since its peak one month ago, and this is also related to the overall market conditions pulling back. In ETH terms Balancer is still near its all time high TVL throughout the STIP. 
+The TVL at the time of writing the previous report was 119M total, and this has stayed consistent as the average daily TVL over the last two weeks. Today the TVL on Balancer is 125M and we can thank the integrations built on top of and within Balancer for optimizing liquidity strategies in throughout the Arbitrum ecosystem for this. Balancer acting as base layer for yield optimizing protocols to tie into is how our dex brings great value to a network like Arbitrum. Regardless of the 60% reduction in incentives TVL has taken a minor step down since its peak one month ago, and this is also related to the overall market conditions pulling back. In ETH terms Balancer is still near its all time high TVL throughout the STIP. The cornerstone of our reports remains to be the long term stickiness of liquidity that our automated method for distribution fosters. Arbitrum and Balancer benefit from this because it leads to an optimized outcome for all parties. 
 
 To remain consistent here are the statistics of Balancer's top performing pools in comparison to the previous epoch. [RDNT/WETH](https://app.balancer.fi/#/arbitrum/pool/0x32df62dc3aed2cd6224193052ce665dc181658410002000000000000000003bd) is holding steady at 68MM up slightly from last weeks 64MM. Radiant has been a powerful partner for Balancer and our 80/20 model has played a key role in the success of their on chain liquid locking tokenomics. The last round had average daily volumes 1.18MM in daily volume, and currently RDNT has been relatively low volatility making the average daily volume 0.25MM per day. Looking at the same liquid staking derivative pools [cbETH/rETH/wstETH](https://app.balancer.fi/#/arbitrum/pool/0x4a2f6ae7f3e5d715689530873ec35593dc28951b000000000000000000000481), [WETH/rETH](https://app.balancer.fi/#/arbitrum/pool/0xade4a71bb62bec25154cfc7e6ff49a513b491e81000000000000000000000497), [wstETH/WETH](https://app.balancer.fi/#/arbitrum/pool/0x9791d590788598535278552eecd4b211bfc790cb000000000000000000000498) and [ankrETH/wstETH](https://app.balancer.fi/#/arbitrum/pool/0x3fd4954a851ead144c2ff72b1f5a38ea5976bd54000000000000000000000480) have stayed relatively the same in TVL since the last round, not breaking the all time highs of two rounds ago, however the ankrETH pool did run up to a new ATH.[cbETH/rETH/wstETH](https://app.balancer.fi/#/arbitrum/pool/0x4a2f6ae7f3e5d715689530873ec35593dc28951b000000000000000000000481) has maintained it's large rapid increase in TVL with a steady hold of roughly 12MM. [sfrxETH/wstETH/rETH](https://app.balancer.fi/#/arbitrum/pool/0x0c8972437a38b389ec83d1e666b69b8a4fcf8bfd00000000000000000000049e) jumped quickly up to 5.48MM in just four weeks and is now sitting at 5.37MM with its highest ETH holdings to date.
 
@@ -38,7 +38,7 @@ The [sFRAX/4POOL](https://app.balancer.fi/#/arbitrum/pool/0x2ce4457acac29da4736a
 
 Stats from [Openblock Dashboard](https://www.openblocklabs.com/app/arbitrum/grantees/Balancer):
 
-![ARB_STIP_Stats_2_7.png](ARB_STIP_Stats_2_7.png) ## NEEEDS UPDATE BY OPENBLOCK
+![ARB_STIP_Stats_2_7.png](ARB_STIP_Stats_2_7.png)
 
 **Additional Info / Disclosures to Multisig:** 
 
@@ -51,7 +51,7 @@ Stats from [Openblock Dashboard](https://www.openblocklabs.com/app/arbitrum/gran
 
 **Link to Dashboard showing metrics:** [Balancer Arbitrum Liquidity Growth Program dashboard](https://dune.com/balancer/arbitrum-lgp?Start+date_d524c0=2023-12-15+00%3A00%3A00&End+date_daf146=&End+date_d75e58=2023-12-28+00%3A00%3A00&Start+date_d2264d=&End+date_d85b75=2024-02-08+00%3A00%3A00&End+date_d19c82=2024-02-08+00%3A00%3A00&Start+date_dc9002=2024-01-26+00%3A00%3A00&Start+date_dfbf60=2024-01-26+00%3A00%3A00)
 
-**Average daily TVL:** $118,887,122
+**Average daily TVL:** $119,779,092
 
 **Average daily transactions:** 507
 
@@ -59,16 +59,14 @@ Stats from [Openblock Dashboard](https://www.openblocklabs.com/app/arbitrum/gran
 
 **Number of unique user addresses:** 3410
 
-**Transaction fees:** Average daily: $5,556
+**Transaction fees:** Average daily: $4,872
 
 
 ## Plan For the Next Two Weeks
 
 **Amount of ARB to be distributed:** 82285.3
 
-**Contracts that will be incentivized:** Contracts to be incentivied are outlined in this [csv](https://github.com/BalancerMaxis/STIP_automation/blob/main/output/dao_grant_2024-01-11_2024-01-25.csv), subject to change as more gauges are added to the veBAL system on Arbitrum.
-
-![Arb_STIP_Gauges_7_2.png](Arb_STIP_Gauges_7_2.png)
+**Contracts that will be incentivized:** Contracts to be incentivied are outlined in this [csv](https://github.com/BalancerMaxis/multisig-ops/pull/791/files#diff-24e6c23e950f601b527af5c3c7865b5c6b6aaa9998ae3689d83dd4afe43c51ad), subject to change as more gauges are added to the veBAL system on Arbitrum.
 
 **Contract address label [Form](https://docs.google.com/forms/d/e/1FAIpQLSd2AYnjAaQjVOLtvemZpsWoN5sTJEJ8dLqdRDExTBQv_SUeug/viewform) completed for all addresses:** Yes
 
