--- a/notebooks/arb_dao_grant_distribution/STIP_Updates/8-3-2024/8-3-2024.md
+++ b/notebooks/arb_dao_grant_distribution/STIP_Updates/8-3-2024/8-3-2024.md
@@ -79,4 +79,4 @@ Stats from [Openblock Dashboard](https://www.openblocklabs.com/app/arbitrum/gran
 The program will eventually end, concluding in March and Balancer will maintain a large amount of the liquidity it has built up from the STIP. Yield bearing tokens will continue to be incentivized by their own revenue generation and the layers built on top of Balancer will leverage various underlying yield sources to make LPing on the platform as competitive as possible in the Arbitrum ecosystem.
 
 
-**Summary of changes to the original plan:** Bi-weekly distributions will continue82285.3 per round due to the extension plan in place from the Arbitrum Foundation. This will make the program last through the first half of March. The optimization BIP details to strengthen top performing pool's can be seen here [BIP-522](https://forum.balancer.fi/t/bip-522-arbitrum-lgp-and-stip-adjustments/5473).
+**Summary of changes to the original plan:** Bi-weekly distributions will continue to be 82285.3 per round. This will make the program last through the first half of March. The optimization BIP details to strengthen top performing pool's can be seen here [BIP-522](https://forum.balancer.fi/t/bip-522-arbitrum-lgp-and-stip-adjustments/5473).
